<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="project.passwordguard.util.LogoProvider" />

        <variable
            name="credentials"
            type="project.passwordguard.model.CredentialsEntity" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/credentials_item_cardview_imageview_wrapper"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                app:cardCornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/credentials_item_ivWebsiteLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:foreground="@{LogoProvider.getLogoResourceFor(credentials)}"
                    android:contentDescription="@string/website" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credentials_item_tvWebsiteUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{credentials.websiteUrl}"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/website_placeholder" />

            <ImageView
                android:id="@+id/ic_username"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_user"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintLeft_toRightOf="@id/credentials_item_cardview_imageview_wrapper"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/credentials_item_tvWebsiteUrl"
                android:contentDescription="@string/username" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credentials_item_tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{credentials.username}"
                app:layout_constraintBottom_toBottomOf="@id/ic_username"
                app:layout_constraintLeft_toRightOf="@id/ic_username"
                app:layout_constraintTop_toTopOf="@id/ic_username"
                tools:text="@string/username_placeholder" />


            <ImageView
                android:id="@+id/ic_email"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                android:src="@drawable/ic_email"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintLeft_toRightOf="@id/credentials_item_cardview_imageview_wrapper"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@id/ic_username"
                app:layout_constraintTop_toBottomOf="@id/ic_username"
                android:contentDescription="@string/email" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credentials_item_tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{credentials.email}"
                app:layout_constraintBottom_toBottomOf="@id/ic_email"
                app:layout_constraintLeft_toRightOf="@id/ic_username"
                app:layout_constraintTop_toTopOf="@id/ic_email"
                tools:text="@string/email_placeholder" />

            <ImageView
                android:id="@+id/ic_password"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:src="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.097"
                app:layout_constraintLeft_toRightOf="@id/credentials_item_cardview_imageview_wrapper"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@id/ic_username"
                app:layout_constraintTop_toBottomOf="@id/ic_email"
                android:contentDescription="@string/password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/credentials_item_tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{credentials.password}"
                app:layout_constraintBottom_toBottomOf="@id/ic_password"
                app:layout_constraintLeft_toRightOf="@id/ic_password"
                app:layout_constraintTop_toTopOf="@id/ic_password"
                tools:text="@string/password_placeholder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>