<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="project.passwordguard.util.AutocompleteTextViewDataProvider" />

        <variable
            name="viewModel"
            type="project.passwordguard.viewmodel.CredentialsInstanceViewModel" />

        <variable
            name="clickHandler"
            type="project.passwordguard.view.activity.CreateOrEditCredentialsInstanceActivity.ClickHander" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.CreateOrEditCredentialsInstanceActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_crete_or_edti_credentials_instance_til0"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/website"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/activity_crete_or_edti_credentials_instance_til1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_web">

            <AutoCompleteTextView
                android:id="@+id/activity_main_actvWebsiteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:dropDownHeight="256dp"
                android:inputType="text"
                android:padding="16dp"
                android:text="@={viewModel.entity.websiteUrl}"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_crete_or_edti_credentials_instance_til1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/username"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/activity_crete_or_edti_credentials_instance_til2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_crete_or_edti_credentials_instance_til0"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_crete_or_edit_credentials_instance_etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={viewModel.entity.username}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_crete_or_edti_credentials_instance_til2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/activity_crete_or_edti_credentials_instance_til3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_crete_or_edti_credentials_instance_til1"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_crete_or_edit_credentials_instance_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={viewModel.entity.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_crete_or_edti_credentials_instance_til3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/activity_crete_or_edti_credentials_instance_btnSave"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_crete_or_edti_credentials_instance_til2"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_crete_or_edit_credentials_instance_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={viewModel.entity.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_crete_or_edti_credentials_instance_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{clickHandler::onBtnSave}"
            android:text="@string/save"
            android:backgroundTint="@color/primaryDarkColor"
            app:layout_constraintBottom_toTopOf="@+id/activity_crete_or_edti_credentials_instance_btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_crete_or_edti_credentials_instance_til3" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_crete_or_edti_credentials_instance_btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{clickHandler::onBtnCancel}"
            android:text="@string/cancel"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_crete_or_edti_credentials_instance_btnSave" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>