<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CreateOrEditCreditCardInstanceActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_container1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Bank name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_bank">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_or_edit_credit_card_instance_etBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_container2"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/credit_card"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_container1"
        app:startIconDrawable="@drawable/ic_credit_card">

        <AutoCompleteTextView
            android:id="@+id/activity_main_actvWebsiteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:dropDownHeight="256dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:padding="16dp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_create_or_edit_credit_card_instance_tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/card_number"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_container2" />

    <LinearLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_llCreditCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_or_edit_credit_card_instance_tvCardNumber">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_create_or_edit_credit_card_instance_containerFirst4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_create_or_edit_credit_card_instance_etFirst4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_create_or_edit_credit_card_instance_containerSecond4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_create_or_edit_credit_card_instance_etSecond4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_create_or_edit_credit_card_instance_containerThird4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_create_or_edit_credit_card_instance_etThird4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_create_or_edit_credit_card_instance_containerFourth4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_create_or_edit_credit_card_instance_etFourth4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_create_or_edit_credit_card_instance_tvExpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/expiration_date"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_llCreditCard" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_create_or_edit_credit_card_instance_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/slash"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_or_edit_credit_card_instance_containerExpirationYear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_create_or_edit_credit_card_instance_containerExpirationMonth"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_or_edit_credit_card_instance_tvExpDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_containerExpirationMonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/activity_create_or_edit_credit_card_instance_slash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_tvExpDate">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_or_edit_credit_card_instance_etExpirationMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="2"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_containerExpirationYear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity_create_or_edit_credit_card_instance_slash"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_tvExpDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_or_edit_credit_card_instance_etExpirationYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="2"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_create_or_edit_credit_card_instance_tvSecurityCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/security_code"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_slash" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_containerSecurityCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_tvSecurityCode">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_or_edit_credit_card_instance_etSecurityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="3"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_create_or_edit_credit_card_instance_tvPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pin_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_containerSecurityCode" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_or_edit_credit_card_instance_containerPin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_or_edit_credit_card_instance_tvPin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_or_edit_credit_card_instance_etPin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>